# self-dot-wiki

./: .gitignore  .pyup.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  MANIFEST.in  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml
docs/: conf.py  index.rst
docs/_static/images/: favicon.xcf  logo.kra  logo.xcf
self_wiki/: __init__.py  __main__.py  todo.py  utils.py  views.py  wiki.py
self_wiki/static/: app.js  keykeeper.js  monokai.css  style.less
self_wiki/static/lib/: accesskey.js  keykeeper.js  less.3.8.1.js  monokai.css
self_wiki/templates/: base.html.j2  edit.html.j2  page.html.j2
tests/: test_todo.py  test_utils.py  test_views.py  test_wiki.py
