[bumpversion]
current_version = 0.7.0
commit = True
tag = True

[bumpversion:file:self_wiki/__init__.py]

[bumpversion:file:setup.py]

[options.entry_points]
console_scripts = 
	self.wiki = self_wiki.__main__:main

[mypy-flask]
ignore_missing_imports = True

[mypy-flask.views]
ignore_missing_imports = True

[mypy-self_wiki]
ignore_missing_imports = True

[mypy-self_wiki.views]
ignore_missing_imports = True

